--- a/app/globals.css
+++ b/app/globals.css
@@ -16,10 +16,17 @@
   }
 }
 
+html,
+body,
+#__next {
+  height: 100%;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 }
 
 input {
