--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #22272e;
     --foreground: #ededed;
     --input-background: gray;
   }
