Adjusted styles in the header

--- a/components/SearchLocation/SearchField/SearchField.module.css
+++ b/components/SearchLocation/SearchField/SearchField.module.css
@@ -41,6 +41,10 @@
   border-radius: 1.25rem 0 0 1.25rem;
 }
 
+:global(.dark) .locationSearchField {
+  background-color: hsl(var(--background));
+}
+
 .locationSearchField:focus {
   outline: none;
 }
