--- a/components/SearchLocation/SearchButton/SearchButton.module.css
+++ b/components/SearchLocation/SearchButton/SearchButton.module.css
@@ -5,12 +5,21 @@
   cursor: pointer;
   border: none;
   border-radius: 0 1.25rem 1.25rem 0;
-  min-width: 2.6rem;
+  min-width: 2.8rem;
   padding: 0;
   margin: 0;
-  background-color: MediumPurple;
+  /* background-color: MediumPurple; */
+  background-color: rgb(168, 85, 247);
 }
 
 .searchButton:hover {
-  background-color: RebeccaPurple;
+  background-color: rgb(162, 69, 248);
+}
+
+:global(.dark) .searchButton {
+  background-color: rgb(203, 155, 255);
+}
+
+:global(.dark) .searchButton:hover {
+  background-color: rgb(190, 135, 250);
 }
