--- a/app/globals.css
+++ b/app/globals.css
@@ -89,8 +89,8 @@
   --secondary-foreground: hsl(0, 0%, 9%);
   --muted: hsl(0, 0%, 96.1%);
   --muted-foreground: hsl(0, 0%, 45.1%);
-  --accent: hsl(0, 0%, 96.1%);
-  --accent-foreground: hsl(0, 0%, 9%);
+  --accent: hsl(262, 47%, 90%);
+  --accent-foreground: RebeccaPurple;
   --destructive: hsl(0, 84.2%, 60.2%);
   --destructive-foreground: hsl(0, 0%, 98%);
   --border: hsl(0, 0%, 89.8%);
